production_deployment/aws-cloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "PPE Detection System on AWS",
  "Parameters": {
    "InstanceType": {
      "Type": "String",
      "Default": "t3.medium",
      "Description": "EC2 instance type"
    },
    "KeyPairName": {
      "Type": "String",
      "Description": "EC2 Key Pair name"
    }
  },
  "Resources": {
    "PPEDetectionInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-0c02fb55956c7d316",
        "InstanceType": {
          "Ref": "InstanceType"
        },
        "KeyName": {
          "Ref": "KeyPairName"
        },
        "SecurityGroups": [
          {
            "Ref": "PPEDetectionSecurityGroup"
          }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": "\n#!/bin/bash\nyum update -y\nyum install -y docker git\nsystemctl start docker\nsystemctl enable docker\nusermod -a -G docker ec2-user\n\n# Install Docker Compose\ncurl -L \"https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)\" -o /usr/local/bin/docker-compose\nchmod +x /usr/local/bin/docker-compose\n\n# Clone and deploy application\ngit clone https://github.com/your-repo/ppe-detection-system.git\ncd ppe-detection-system\ndoc [...]
          }
        }
      }
    },
    "PPEDetectionSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for PPE Detection System",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    }
  },
  "Outputs": {
    "InstanceId": {
      "Description": "Instance ID of the PPE Detection System",
      "Value": {
        "Ref": "PPEDetectionInstance"
      }
    },
    "PublicIP": {
      "Description": "Public IP address of the PPE Detection System",
      "Value": {
        "Fn::GetAtt": [
          "PPEDetectionInstance",
          "PublicIp"
        ]
      }
    }
  }
}
